--- a/project2_report.html
+++ b/project2_report.html
@@ -182,7 +182,8 @@ Using yearly averages reduces short-term fluctuations, making the final plot smo
           <img src="gas_against.png" alt="" />
           <figcaption>BRIEF CAPTION HERE.</figcaption>
         </figure>
-
+        
+        <p>Score: -1.5</p>
         <p>Design Decisions and Rationale:</p>
 
         <ul>
